--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ bleak-winrt==1.2.0
 bottle==0.13.1
 bottle-websocket==0.2.9
 cffi==1.17.1
+click==8.1.7
+colorama==0.4.6
 Eel==0.17.0
 et-xmlfile==1.1.0
 future==1.0.0
@@ -26,14 +28,19 @@ pycparser==2.22
 pyinstaller==6.10.0
 pyinstaller-hooks-contrib==2024.8
 pyparsing==3.1.4
-PyQt5==5.15.11
+PyQt5==5.15.9
+pyqt5-plugins==5.15.9.2.3
 PyQt5-Qt5==5.15.2
+pyqt5-tools==5.15.9.3.3
 PyQt5_sip==12.15.0
 pyserial==3.5
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 pywin32==306
 pywin32-ctypes==0.2.3
+qt5-applications==5.15.2.2.3
+qt5-tools==5.15.2.1.3
 six==1.16.0
 telemetrix==1.35
 typing_extensions==4.12.2
